--- a/Paylike_Payment/view/frontend/layout/checkout_index_index.xml
+++ b/Paylike_Payment/view/frontend/layout/checkout_index_index.xml
@@ -8,9 +8,10 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <css src="Esparks_Paylike/css/paylike.css" />
-        <script src="https://sdk.paylike.io/3.js" src_type="url" />    
+        <script src="https://sdk.paylike.io/3.js" src_type="url" />
+        <link src="Esparks_Paylike::js/logs.js"/>    
     </head>
-    
+
     <body>
         <referenceBlock name="checkout.root">
             <arguments>
