[in progress] !! Upgrade js SDK to v10
Changes
- upgraded js SDK from 6.js to 10.js
- modify logic to work with v10 js SDK
- incremented minor version to 1.4.0
- removed version from lib folder files
- update Readme with alternate manual installation

--- a/Paylike_Payment/view/adminhtml/templates/system/config/LogsActions.phtml
+++ b/Paylike_Payment/view/adminhtml/templates/system/config/LogsActions.phtml
@@ -27,8 +27,8 @@
       a.click();
   }
 
-  const logsEnabledSelector = jQuery("#payment_other_paylikepaymentmethod_enable_logs");
-  jQuery.ajax({
+  const logsEnabledSelector = $("#payment_other_paylikepaymentmethod_enable_logs");
+  $.ajax({
     url: "/paylike/index/Log",
     type: 'POST',
     dataType: 'text',
