--- a/view/adminhtml/templates/system/config/LogsActions.phtml
+++ b/view/adminhtml/templates/system/config/LogsActions.phtml
@@ -27,8 +27,8 @@
       a.click();
   }
 
-  const logsEnabledSelector = jQuery("#payment_other_paylikepaymentmethod_enable_logs");
-  jQuery.ajax({
+  const logsEnabledSelector = $("#payment_other_paylikepaymentmethod_enable_logs");
+  $.ajax({
     url: "/paylike/index/Log",
     type: 'POST',
     dataType: 'text',
