--- a/Paylike_Payment/view/frontend/templates/paylikemultishipping.phtml
+++ b/Paylike_Payment/view/frontend/templates/paylikemultishipping.phtml
@@ -34,10 +34,14 @@ echo '<script type="text/javascript">window.paymentMethod = "' . $block->getSele
                         }
                         /**
                          * (Need improvement/rethink the logic)
-                         * If user closes the popup, we need to refresh the page.
+                         * In "test" mode if user closes the popup, we need to refresh the page.
                          * If not reload, the popup will show up in live mode.
                          */
-                        return location.reload();
+                        if ('test' === window.checkoutConfig.config.test) {
+                            return location.reload();
+                        }
+
+                        return console.warn(err);
                     }
 
                     if (res.transaction.id !== undefined && res.transaction.id !== "") {
