--- a/view/frontend/web/template/payment/paylikepaymentmethod.html
+++ b/view/frontend/web/template/payment/paylikepaymentmethod.html
@@ -14,7 +14,7 @@
 		<span class="paylike-card-logos" data-bind="html:getCardLogos()"></span>
 	
 	</div>
-	<div class="payment-method-content">
+	<div class="payment-method-content paylike-pm-description">
 		<!-- ko foreach: getRegion('messages') -->
 		<!-- ko template: getTemplate() --><!-- /ko -->
 		<!--/ko-->
@@ -36,6 +36,7 @@
 		<div class="actions-toolbar">
 			<div class="primary">
 				<button class="action primary checkout"
+						id="paylikepaymentmethod-button"
 						type="submit"
 						data-bind="
                         click: displayPopup,
